# surfman

./: .gitignore  .travis.yml  Cargo.toml  Cargo.toml.bak  Makefile  README.md  appveyor.yml  build.rs  rust-toolchain.toml
.github/workflows/: main.yml  rust.yml
android-example/app/: build.gradle
android-example/app/src/main/: AndroidManifest.xml
android-example/gradle/wrapper/: gradle-wrapper.properties
android-example/rust/: Cargo.toml
android-example/rust/src/: lib.rs
examples/: boing.rs  chaos_game.rs  offscreen.rs  threads.rs
examples/common/: mod.rs
resources/examples/: blit.fs.glsl  check.fs.glsl  quad.vs.glsl
src/: chains.rs  common_methods.rs  connection.rs  context.rs  device.rs  draw_buffer.rs  error.rs  framebuffer.rs  gl_context.rs  gl_context_attributes.rs  gl_context_capabilities.rs  gl_feature.rs  gl_formats.rs  gl_info.rs  gl_limits.rs  gl_screen_buffer.rs  gl_utils.rs  info.rs  layers_surface_wrapper.rs  lib.rs  limits.rs  macros.rs  render_target.rs  renderbuffers.rs  surface.rs  tests.rs  unix.rs
src/angle/: connection.rs  context.rs  device.rs  mod.rs  surface.rs
src/base/: mod.rs
src/base/egl/: context.rs  device.rs  error.rs  ffi.rs  mod.rs  surface.rs
src/base/io_surface/: connection.rs  device.rs  ffi.rs  mod.rs  surface.rs
src/cgl/: connection.rs  context.rs  device.rs  error.rs  ffi.rs  mod.rs  surface.rs
src/hardware_buffer/: android_ffi.rs  connection.rs  context.rs  device.rs  mod.rs
src/hardware_buffer/surface/: android_surface.rs  mod.rs  ohos_surface.rs
src/mesa_surfaceless/: connection.rs  context.rs  device.rs  mod.rs  surface.rs
src/multi/: connection.rs  context.rs  device.rs  mod.rs  surface.rs
src/platform/: mod.rs
src/platform/android/: context.rs  device.rs  mod.rs
src/platform/android/bindings/: hardware_buffer.rs  mod.rs
src/platform/common/: mod.rs
src/platform/common/egl/: mod.rs
src/platform/egl/: connection.rs  context.rs  device.rs  mod.rs  ohos_ffi.rs
src/platform/egl/surface/: android_surface.rs  mod.rs  ohos_surface.rs
src/platform/generic/: mod.rs
src/platform/generic/egl/: context.rs  device.rs  (+3 more)
src/platform/glx/: gl_context.rs  mod.rs  utils.rs
src/platform/macos/: adapter.rs  context.rs  device.rs  error.rs  loader.rs  mod.rs  surface.rs
src/platform/not_implemented/: context.rs  device.rs  gl_context.rs  mod.rs  native_gl_context.rs  surface.rs
src/platform/unix/: default.rs  mod.rs
src/platform/windows/: mod.rs
src/platform/with_angle/: com.rs  mod.rs  surface.rs
src/platform/with_cgl/: context.rs  device.rs  display.rs  error.rs  gl_context.rs  mod.rs  native_gl_context.rs  surface.rs
src/platform/with_eagl/: gl_context.rs  mod.rs  native_gl_context.rs
src/platform/with_egl/: device_angle.rs  gl_context.rs  mod.rs  native_gl_context.rs  surface.rs  surface_angle.rs  surface_native.rs  utils.rs
src/platform/with_glutin/: mod.rs
src/platform/with_glx/: gl_context.rs  mod.rs  native_gl_context.rs  utils.rs
src/platform/with_osmesa/: mod.rs
src/platform/with_wgl/: gl_context.rs  mod.rs  native_gl_context.rs  utils.rs  wgl_attributes.rs
src/wayland/: connection.rs  context.rs  device.rs  mod.rs  surface.rs
src/wgl/: connection.rs  context.rs  device.rs  mod.rs  surface.rs
src/x11/: connection.rs  context.rs  device.rs  mod.rs  surface.rs
surfman/: Cargo.toml  build.rs
surfman/examples/: chaos_game.rs  offscreen.rs  threads.rs
surfman/examples/common/: mod.rs
surfman/resources/examples/: blit.fs.glsl  check.fs.glsl  grid.fs.glsl  quad.vs.glsl  tri.fs.glsl  tri.vs.glsl
surfman/src/: adapter.rs  chains.rs  connection.rs  context.rs  device.rs  error.rs  gl_utils.rs  info.rs  lib.rs  macros.rs  renderbuffers.rs  surface.rs  tests.rs
surfman/src/geom/: angle.rs  approxeq.rs  approxord.rs  box2d.rs  box3d.rs  homogen.rs  length.rs  mod.rs  num.rs  point.rs  rect.rs  rigid.rs  rotation.rs  scale.rs  side_offsets.rs  size.rs  transform2d.rs  transform3d.rs  translation.rs  trig.rs  vector.rs
surfman/src/implementation/: adapter.rs  connection.rs  device.rs  mod.rs  surface.rs
surfman/src/platform/: mod.rs
surfman/src/platform/android/: adapter.rs  connection.rs  context.rs  device.rs  error.rs  ffi.rs  mod.rs  surface.rs
surfman/src/platform/common/egl/: error.rs
surfman/src/platform/egl/: android_surface.rs  connection.rs  context.rs  mod.rs  ohos_ffi.rs
surfman/src/platform/egl/surface/: android_surface.rs  mod.rs  ohos_surface.rs
surfman/src/platform/generic/: mod.rs
surfman/src/platform/generic/egl/: context.rs  device.rs  error.rs  ffi.rs  mod.rs  surface.rs
surfman/src/platform/generic/multi/: adapter.rs  connection.rs  context.rs  device.rs  mod.rs  surface.rs
surfman/src/platform/generic/osmesa/: adapter.rs  connection.rs  context.rs  device.rs  mod.rs  surface.rs
surfman/src/platform/generic/universal/: adapter.rs  connection.rs  context.rs  device.rs  mod.rs  surface.rs
surfman/src/platform/macos/: adapter.rs  connection.rs  context.rs  device.rs  error.rs  ffi.rs  mod.rs  surface.rs
surfman/src/platform/macos/cgl/: adapter.rs  connection.rs  context.rs  device.rs  error.rs  mod.rs  surface.rs
surfman/src/platform/macos/system/: adapter.rs  connection.rs  device.rs  ffi.rs  mod.rs  surface.rs
surfman/src/platform/ohos/: connection.rs  context.rs  device.rs  ffi.rs  mod.rs  surface.rs
surfman/src/platform/unix/: default.rs  mod.rs
surfman/src/platform/unix/generic/: connection.rs  context.rs  device.rs  mod.rs  surface.rs
surfman/src/platform/unix/surfaceless/: connection.rs  context.rs  device.rs  mod.rs  surface.rs
surfman/src/platform/unix/wayland/: adapter.rs  connection.rs  context.rs  device.rs  ffi.rs  mod.rs  surface.rs
surfman/src/platform/unix/x11/: adapter.rs  connection.rs  context.rs  device.rs  error.rs  ffi.rs  mod.rs  surface.rs
surfman/src/platform/windows/: mod.rs
surfman/src/platform/windows/angle/: adapter.rs  connection.rs  context.rs  device.rs  mod.rs  surface.rs
surfman/src/platform/windows/wgl/: adapter.rs  connection.rs  context.rs  device.rs  mod.rs  surface.rs
(+67 files in other folders)
