[package]
name = "surfman"
license = "MIT / Apache-2.0"
edition = "2018"
version = "0.23.0"
authors = [
    "Patrick Walton <pcwalton@mimiga.net>",
    "Emilio Cobos Álvarez <emilio@crisal.io>",
    "The Servo Project Developers",
]
description = "Multithreaded GPU usage made easy"
repository = "https://github.com/pcwalton/rust-offscreen-rendering-context"
build = "build.rs"

[build-dependencies]
gl_generator = "0.11"

[features]
sm-osmesa = ["osmesa-sys"]
sm-x11 = ["x11"]

[dependencies]
bitflags = "1.1"
lazy_static = "1"
libc = "0.2"

[dependencies.euclid]
version = "0.20"
features = []

[dependencies.glutin]
version = "0.21"
optional = true

[dependencies.osmesa-sys]
version = "0.1"
optional = true

[dev-dependencies]
gl = "0.13"
sdl2 = "0.32"
sdl2-sys = "0.32"

[target.x86_64-apple-darwin.dependencies]
cgl = "0.3.2"

[target.x86_64-apple-darwin.dependencies.core-foundation]
git = "https://github.com/zakorgy/core-foundation-rs"
branch = "io-surface-alpha"

[target.x86_64-apple-darwin.dependencies.io-surface]
git = "https://github.com/zakorgy/core-foundation-rs"
branch = "io-surface-alpha"

[target.'cfg(all(unix, not(any(target_os = "macos", target_os = "android"))))'.dependencies.x11]
version = "2.3.0"
features = ["xlib"]

[target.'cfg(any(not(unix), target_os = "macos", target_os = "android"))'.dependencies.x11]
optional = true
version = "2.3.0"
features = ["xlib"]

# Ensure that we have a static libEGL.lib present for linking with EGL bindings.
[target.'cfg(target_os = "windows")'.dev-dependencies]
mozangle = { version = "0.2", features = ["egl"] }

[target.'cfg(target_os = "windows")'.dependencies]
wio = "0.2"
winapi = { version = "0.3", features = ["d3d11", "wingdi", "winuser", "libloaderapi"] }
