[package]
name = "surfman_android_threads"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[lib]
crate_type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
android_logger = "0.8"
gl = "0.14"
jni = "0.13"
log = "0.4"

[dependencies.euclid]
version = "0.22"
features = []

[dependencies.surfman]
path = "../../surfman"
features = ["sm-test"]
