[package]
name = "surfman_android_threads"
version = "0.1.0"
authors = ["Patrick Walton <pcwalton@mimiga.net>"]
edition = "2018"

[lib]
name = "main"
crate_type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
android_logger = "0.13"
euclid = { version = "0.22" }
gl = "0.14"
jni = "0.21"
log = "0.4"
surfman = { path = "../../surfman", features = [ "sm-test" ] }
winit = { version = "0.29.10", features = [ "android-native-activity", "rwh_05" ] }
